# ChangeLog for net-wireless/wavemon
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/wavemon/ChangeLog,v 1.4 2002/12/17 19:46:04 vapier Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  31 Oct 2002; Hannes Mehnert <hannes@gentoo.org>:
  moved to net-wireless

*wavemon-0.3.3 ( 28 May 2002 )
	28 May 2002  (Ben Lutgens <lamer@gentoo.org>: Wavemon is an ncurses tool
	for monitoring you wavelan wireless cards