@@ -1,0 +1,31 @@
+# Copyright 1999-2002 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wavemon/Attic/wavemon-0.4.0b.ebuild,v 1.1 2003/01/07 11:02:00 jrray Exp $
+
+S=${WORKDIR}/${P}
+DESCRIPTION="ncurses based monitor util for your wavelan cards"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
+HOMEPAGE="http://www.jm-music.de/projects.html"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="x86 ppc sparc"
+
+DEPEND="sys-libs/ncurses"
+
+src_unpack() {
+	unpack ${A}
+	cd ${S}
+
+	mv configure configure.orig
+	sed -e "s|^CFLAGS=\".*\"|CFLAGS=\"${CFLAGS}\"|" \
+		configure.orig > configure
+	chmod +x configure
+}
+
+src_install() {
+	dodir /usr/bin
+	dodir /usr/share/man/{man1,man5}
+	make prefix="${D}/usr" mandir="${D}/usr/share/man" install
+	dodoc README TODO COPYING AUTHORS
+}
